# ai-foundry-agent-service-multitenant

./: .gitignore  README-ja.md  README.md  app.py  azure.yaml  install.sh  main.py  multitenency_aks.ipynb  readme.md  tools.py
.github/: POOLED-APP-SETUP.md  SETUP-en.md  SETUP-ja.md  copilot-instructions.md
.github/workflows/: deploy-pooled-app.yml  deploy-pooled-infra.yml  deploy-silo-infra.yml
docker/: Dockerfile  app.py  readme.md  requirements.txt
docs/: api-reference-en.md  api-reference-ja.md  developer-guide-en.md  developer-guide-ja.md  github-environment-setup.md  pooled-application-spec-en.md  pooled-application-spec-ja.md
infra/: main.bicep  main.parameters.dev.json  main.parameters.json
pooled/: README-ja.md  README.md
pooled/app/: .env.example  Dockerfile  Makefile  README.md  main.py  pyproject.toml  pytest.ini
pooled/app/src/: __init__.py
pooled/app/src/core/: __init__.py  app.py  config.py
pooled/app/src/middleware/: __init__.py  cors.py  logging.py
pooled/app/src/routers/: __init__.py  blob_storage.py  dynamic_sessions.py  health.py  root.py
pooled/app/src/services/: __init__.py  blob_storage_service.py  dynamic_sessions_service.py  health_service.py  sas_token_service.py
pooled/app/tests/: conftest.py
pooled/app/tests/integration/: test_blob_storage_integration.py  test_dynamic_sessions_service.py  test_health_integration.py
pooled/app/tests/unit/: test_blob_storage_router.py  test_blob_storage_service.py  test_dynamic_sessions_router.py  test_health_router.py  test_health_service.py
silo/: README-ja.md  README.md
(+15 files in other folders)
