[project]
name = "app"
version = "0.1.0"
description = "Multi-tenant AI Agent Service - Pooled Architecture"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.13",
    "uvicorn[standard]>=0.34.3",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.25.0",
    "pytest-mock>=3.10.0",
]
